# 3bir

./: .gitignore  app.py  flake.nix  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: build_nix.yml
static/src/: tailwind.css
templates/: base.html  countdown_function.js  draw.html  leaderboard.html  login.html  lose.html  schedule.html  team.html  win.html
templates/game_states/: done.html  inactive.html  matched.html  not_logged_in.html  playing.html  ready.html  ready_request.html  searching.html  submit_request.html  submitted.html
